--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url('../loginpage/votingimg.jpg');
+    background: linear-gradient(to right, #ff7e5f, #feb47b);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -8,6 +8,7 @@ body {
     margin: 0;
     padding: 0;
 }
+
 
 .container {
     display: flex;
